deploy/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: settle-api
  namespace: settle
  annotations:
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "3"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "10"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "10"
    nginx.ingress.kubernetes.io/proxy-next-upstream: "error"
    nginx.ingress.kubernetes.io/proxy-next-upstream-tries: "2"
    nginx.ingress.kubernetes.io/proxy-body-size: "1m"
spec:
  ingressClassName: nginx
  rules:
    - host: settle.localtest.me
      http:
        paths:
          - path: /settlements
            pathType: Prefix
            backend:
              service:
                name: settle-api
                port:
                  name: http
          - path: /readyz
            pathType: Exact
            backend:
              service:
                name: settle-api
                port:
                  name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: settle-api-reports
  namespace: settle
  annotations:
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "3"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "20"
    nginx.ingress.kubernetes.io/proxy-next-upstream: "error"
    nginx.ingress.kubernetes.io/proxy-next-upstream-tries: "1"
spec:
  ingressClassName: nginx
  rules:
    - host: settle.localtest.me
      http:
        paths:
          - path: /reports
            pathType: Prefix
            backend:
              service:
                name: settle-api
                port:
                  name: http
