deploy/k8s/base/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: settle
spec:
  podSelector: {}
  policyTypes: ["Ingress", "Egress"]
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns
  namespace: settle
spec:
  podSelector: {}
  policyTypes: ["Egress"]
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - { protocol: UDP, port: 53 }
        - { protocol: TCP, port: 53 }
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: settle-api
  namespace: settle
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: settle-api
  policyTypes: ["Ingress", "Egress"]
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - { protocol: TCP, port: 8000 }
  egress:
    - to:
        - podSelector:
            matchLabels:
              settle.paylane.io/role: database
      ports:
        - { protocol: TCP, port: 5432 }
    - to:
        - podSelector:
            matchLabels:
              settle.paylane.io/role: cache
      ports:
        - { protocol: TCP, port: 6379 }
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: settle-worker
  namespace: settle
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: settle-worker
  policyTypes: ["Ingress", "Egress"]
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - { protocol: TCP, port: 9100 }
  egress:
    - to:
        - podSelector:
            matchLabels:
              settle.paylane.io/role: database
      ports:
        - { protocol: TCP, port: 5432 }
    - to:
        - podSelector:
            matchLabels:
              settle.paylane.io/role: cache
      ports:
        - { protocol: TCP, port: 6379 }
    - to:
        - podSelector:
            matchLabels:
              settle.paylane.io/role: bank
      ports:
        - { protocol: TCP, port: 8080 }
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: settle-migrate
  namespace: settle
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: settle-migrate
  policyTypes: ["Egress"]
  egress:
    - to:
        - podSelector:
            matchLabels:
              settle.paylane.io/role: database
      ports:
        - { protocol: TCP, port: 5432 }
